Refs #140518 - Fix cards width on small screen.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -1235,7 +1235,7 @@ div.ui.modal.facet {
 @media only screen and (min-width: 770px) {
   div.cards {
     div.card-item {
-      min-width: 230px;
+      max-width: 230px !important;
     }
   }
 }
